# cosmic

./: .gitignore  README.md  pyproject.toml
cosmic/: main.py
cosmic/adapter/entities/: machine_template.py
cosmic/adapter/templates/: pytransitions_machine.mako
cosmic/adapter/xml/: adapter.py  model_factory.py  uppaal_adapter.py
cosmic/cli/: cli.py
cosmic/generator/: code_generator.py
cosmic/utils/: string_oper.py
docs/: index.md
generated_xml/: Human_Receiver.py  Human_Validator.py  Robot_Assembler.py  Robot_Deliver.py  Sector.py
src/: main.py
src/adapter/templates/: pytransitions_machine.mako
src/adapter/xml/: adapter.py  model_factory.py  uppaal_adapter.py
src/cli/: cosmic_app.py
src/cli/components/: dropdown.py  filtered_directory_tree.py
src/cli/pages/: file_picker.py  main.py
src/generator/: code_generator.py
src/generator/tmp/mako_modules/src/adapter/templates/: pytransitions_machine.mako.py
src/utils/: utils.py
tests/: conftest.py
tests/adapter/: conftest.py  test_uppaal_adapter.py
tests/cli/: conftest.py  test_cli.py
tests/generator/: test_code_generator.py
tests/mock_files/: hcl_teste.xml
tests/utils/: test_string_oper.py
