[tool.poetry]
name = "cosmic"
version = "0.1.0"
description = "Code Output for State Machine Interactive Creation"
authors = ["bopj <bopj@softex.cin.ufpe.br>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.9.4"
textual = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
taskipy = "^1.14.1"
pytest-cov = "^6.0.0"
textual-dev = "^1.7.0"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "python ./src/main.py"
docs = "mkdocs serve"
bdocs = "mkdocs build"
test = "pytest -vv tests --ignore=tests/cao"

[tool.black]
line-length = 90
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-vv --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]
